# secure-sql-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docker/: entrypoint.sh  wait_for_opa.py
docs/: POLICY_AUTHORING.md  WRITE_MODE_DESIGN.md
policy/: allowed_policy.txt  allowed_policy_castledm_test.txt
policy/data/: acl.example.json
policy/rego/: acl.rego  authz.rego  default_constraints.rego  write_constraints.rego
scripts/: run-docker-opa-smoke.sh
src/secure_sql_mcp/: __init__.py  config.py  database.py  opa_policy.py  query_validator.py  server.py
src/secure_sql_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_config.py  test_mcp_interface.py  test_mcp_stdio_security.py  test_opa_policy.py  test_query_validator_security.py  test_write_facts.py
tests/fixtures/: allowed_policy.txt
tests/integration/docker/: __init__.py  conftest.py  test_mcp_docker_opa_matrix.py
tests/integration/docker/acl/: restricted_acl.json
tests/integration/docker/db-init/: mysql.sql  postgres.sql
tests/integration/docker/policies/: wildcard_tables.txt  write_update_restricted.txt
