[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-sql-mcp"
version = "0.1.0"
description = "Read-only SQL MCP server with table-level access controls."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "jrhuerta" }]
dependencies = [
  "mcp",
  "sqlglot",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "aiomysql",
  "aiosqlite",
  "pydantic-settings",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
secure-sql-mcp = "secure_sql_mcp.server:main"

[project.urls]
Homepage = "https://github.com/jrhuerta/secure-sql-mcp"
Repository = "https://github.com/jrhuerta/secure-sql-mcp"
Documentation = "https://github.com/jrhuerta/secure-sql-mcp#readme"
Issues = "https://github.com/jrhuerta/secure-sql-mcp/issues"

[project.optional-dependencies]
dev = [
  "mcp[cli]",
  "pre-commit",
  "pytest",
  "ruff",
  "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["src", "tests"]
